--- a/components/camel-http/pom.xml
+++ b/components/camel-http/pom.xml
@@ -80,6 +80,12 @@
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
