--- a/components/camel-http/pom.xml
+++ b/components/camel-http/pom.xml
@@ -83,7 +83,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.1</version>
+      <version>${commons-lang3-version}</version>
       <type>jar</type>
     </dependency>
   </dependencies>
