--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -65,6 +65,7 @@
     <commons-io-version>1.4</commons-io-version>
     <commons-jexl2-version>2.0.1</commons-jexl2-version>
     <commons-lang-version>2.6</commons-lang-version>
+    <commons-lang3-version>3.1</commons-lang3-version>
     <commons-logging-version>1.1.1</commons-logging-version>
     <commons-net-version>3.1</commons-net-version>
     <commons-pool-version>1.6</commons-pool-version>
